fix: added overflow auto

--- a/src/components/Main/Body/Body.css
+++ b/src/components/Main/Body/Body.css
@@ -4,7 +4,6 @@
     height: calc(100vh - 3.5em);
 
     /* for safari on iOS */
-    /* position: fixed; */
-    position: sticky;
-    top: 0;
+    position: fixed;
+    overflow-y: auto;
 }
